Working on Chapter 1.1

--- a/data/bibliography/bibli.bib
+++ b/data/bibliography/bibli.bib
@@ -1,9 +1,59 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Aquarius Rai at 2015-07-28 15:40:34 +0800 
+%% Created for Shangqi at 2017-11-05 23:13:07 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@inproceedings{sun2010privacy,
+	Author = {Sun, Jinyuan and Zhu, Xiaoyan and Fang, Yuguang},
+	Booktitle = {INFOCOM, 2010 Proceedings IEEE},
+	Date-Added = {2017-11-05 09:07:02 +0000},
+	Date-Modified = {2017-11-05 09:07:38 +0000},
+	Organization = {IEEE},
+	Pages = {1--9},
+	Title = {{A Privacy-Preserving Scheme for Online Social Networks with Efficient Revocation}},
+	Year = {2010}}
+
+@inproceedings{baden2009persona,
+	Author = {Baden, Randy and Bender, Adam and Spring, Neil and Bhattacharjee, Bobby and Starin, Daniel},
+	Booktitle = {ACM SIGCOMM Computer Communication Review},
+	Date-Added = {2017-11-05 06:54:49 +0000},
+	Date-Modified = {2017-11-05 12:11:28 +0000},
+	Organization = {ACM},
+	Pages = {135--146},
+	Title = {{Persona: An Online Social Network with User-Defined Privacy}},
+	Year = {2009}}
+
+@inproceedings{guha2008noyb,
+	Author = {Guha, Saikat and Tang, Kevin and Francis, Paul},
+	Booktitle = {Proceedings of the first workshop on Online social networks},
+	Date-Added = {2017-11-05 05:45:17 +0000},
+	Date-Modified = {2017-11-05 12:11:22 +0000},
+	Organization = {ACM},
+	Pages = {49--54},
+	Title = {{NOYB: Privacy in Online Social Networks}},
+	Year = {2008}}
+
+@inproceedings{brown2008social,
+	Author = {Brown, Garrett and Howe, Travis and Ihbe, Micheal and Prakash, Atul and Borders, Kevin},
+	Booktitle = {Proceedings of the 2008 ACM conference on Computer supported cooperative work},
+	Date-Added = {2017-11-05 04:42:09 +0000},
+	Date-Modified = {2017-11-05 12:12:37 +0000},
+	Organization = {ACM},
+	Pages = {403--412},
+	Title = {{Social Networks and Context-Aware Spam}},
+	Year = {2008}}
+
+@inproceedings{gross2005information,
+	Author = {Gross, Ralph and Acquisti, Alessandro},
+	Booktitle = {Proceedings of the 2005 ACM workshop on Privacy in the electronic society},
+	Date-Added = {2017-11-05 00:11:22 +0000},
+	Date-Modified = {2017-11-05 12:13:07 +0000},
+	Organization = {ACM},
+	Pages = {71--80},
+	Title = {{Information Revelation and Privacy in Online Social Networks}},
+	Year = {2005}}
