--- a/data/reference.tex
+++ b/data/reference.tex
@@ -1,4 +1,6 @@
 \clearpage
 \addcontentsline{toc}{chapter}{References}
+\begin{spacing}{1}
 \bibliography{data/bibliography/bibli}
+\end{spacing}
 \clearpage
