--- a/report.tex
+++ b/report.tex
@@ -15,9 +15,9 @@
 \mainmatter
 
 % main  body
-\include{data/chapter1}
-\include{data/chapter2}
-\include{data/chapter3}
+\include{data/introduction}
+\include{data/literature}
+\include{data/progress}
 
 \include{data/reference}
 \end{document}
