--- a/data/bibliography/bibli.bib
+++ b/data/bibliography/bibli.bib
@@ -1,12 +1,85 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Shangqi at 2017-11-05 23:13:07 +1100 
+%% Created for Shangqi at 2017-11-07 22:34:39 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{mcpherson2001birds,
+	Author = {McPherson, Miller and Smith-Lovin, Lynn and Cook, James M},
+	Date-Added = {2017-11-07 11:27:38 +0000},
+	Date-Modified = {2017-11-07 11:34:39 +0000},
+	Journal = {Annual review of sociology},
+	Number = {1},
+	Pages = {415--444},
+	Publisher = {Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA},
+	Title = {{Birds of A Feather: Homophily in Social Networks}},
+	Volume = {27},
+	Year = {2001}}
+
+@misc{facebook2013graph,
+	Author = {Facebook},
+	Date-Added = {2017-11-07 09:16:49 +0000},
+	Date-Modified = {2017-11-07 09:17:33 +0000},
+	Howpublished = {[online]\ \url{https://www.facebook.com/graphsearcher/}},
+	Title = {{Facebook Graph Search}},
+	Year = {2013}}
+
+@misc{facebook2013growth,
+	Author = {Facebook},
+	Date-Added = {2017-11-07 08:46:21 +0000},
+	Date-Modified = {2017-11-07 08:53:56 +0000},
+	Howpublished = {[online]\ \url{https://www.facebook.com/media/set/?set=a.10151908376636729.1073741825.20531316728&type=3theater}},
+	Title = {{Facebook's Growth In The Past Year}},
+	Year = {2013}}
+
+@article{sweeney2002k,
+	Author = {Sweeney, Latanya},
+	Date-Added = {2017-11-06 23:59:34 +0000},
+	Date-Modified = {2017-11-07 00:00:15 +0000},
+	Journal = {International Journal of Uncertainty, Fuzziness and Knowledge-Based Systems},
+	Number = {05},
+	Pages = {557--570},
+	Publisher = {World Scientific},
+	Title = {{k-Anonymity: A Model for Protecting Privacy}},
+	Volume = {10},
+	Year = {2002}}
+
+@article{domingo2008privacy,
+	Author = {Domingo-Ferrer, Josep and Viejo, Alexandre and Seb{\'e}, Francesc and Gonz{\'a}lez-Nicol{\'a}s, {\'U}rsula},
+	Date-Added = {2017-11-06 05:33:48 +0000},
+	Date-Modified = {2017-11-06 05:34:21 +0000},
+	Journal = {Computer Networks},
+	Number = {15},
+	Pages = {3007--3016},
+	Publisher = {Elsevier},
+	Title = {{Privacy homomorphisms for social networks with private relationships}},
+	Volume = {52},
+	Year = {2008}}
+
+@article{cutillo2009safebook,
+	Author = {Cutillo, Leucio Antonio and Molva, Refik and Strufe, Thorsten},
+	Date-Added = {2017-11-06 05:27:23 +0000},
+	Date-Modified = {2017-11-06 05:28:42 +0000},
+	Journal = {IEEE Communications Magazine},
+	Number = {12},
+	Publisher = {IEEE},
+	Title = {{Safebook: a Privacy Preserving Online Social Network Leveraging on Real-Life Trust}},
+	Volume = {47},
+	Year = {2009}}
+
+@inproceedings{tootoonchian2009lockr,
+	Author = {Tootoonchian, Amin and Saroiu, Stefan and Ganjali, Yashar and Wolman, Alec},
+	Booktitle = {Proceedings of the 5th international conference on Emerging networking experiments and technologies},
+	Date-Added = {2017-11-06 00:30:01 +0000},
+	Date-Modified = {2017-11-06 05:27:41 +0000},
+	Organization = {ACM},
+	Pages = {169--180},
+	Title = {{Lockr: Better Privacy for Social Networks}},
+	Year = {2009}}
 
 @inproceedings{sun2010privacy,
 	Author = {Sun, Jinyuan and Zhu, Xiaoyan and Fang, Yuguang},
