Research question done

--- a/data/bibliography/bibli.bib
+++ b/data/bibliography/bibli.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Shangqi at 2017-11-07 22:34:39 +1100 
+%% Created for Shangqi at 2017-11-08 22:19:39 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{time2013twitter,
+	Author = {Time},
+	Date-Added = {2017-11-08 11:18:52 +0000},
+	Date-Modified = {2017-11-08 11:19:39 +0000},
+	Howpublished = {\\ \url{http://business.time.com/2013/10/08/twitter-is-selling-access-to-your-tweets-for-millions/} [online]},
+	Title = {{Twitter Is Selling Access to Your Tweets for Millions}},
+	Year = {2013}}
+
+@misc{nytime2012facebook,
+	Author = {The New York Times},
+	Date-Added = {2017-11-08 11:17:07 +0000},
+	Date-Modified = {2017-11-08 11:18:26 +0000},
+	Howpublished = {\\ \url{http://www.nytimes.com/2012/02/05/opinion/sunday/facebook-is-using-you.html?pagewanted=all&_r=2&} [online]},
+	Title = {{Facebook Is Using You}},
+	Year = {2012}}
 
 @article{mcpherson2001birds,
 	Author = {McPherson, Miller and Smith-Lovin, Lynn and Cook, James M},
@@ -23,16 +39,16 @@
 @misc{facebook2013graph,
 	Author = {Facebook},
 	Date-Added = {2017-11-07 09:16:49 +0000},
-	Date-Modified = {2017-11-07 09:17:33 +0000},
-	Howpublished = {[online]\ \url{https://www.facebook.com/graphsearcher/}},
+	Date-Modified = {2017-11-08 00:03:34 +0000},
+	Howpublished = {\\ \url{https://www.facebook.com/graphsearcher/} [online]},
 	Title = {{Facebook Graph Search}},
 	Year = {2013}}
 
 @misc{facebook2013growth,
 	Author = {Facebook},
 	Date-Added = {2017-11-07 08:46:21 +0000},
-	Date-Modified = {2017-11-07 08:53:56 +0000},
-	Howpublished = {[online]\ \url{https://www.facebook.com/media/set/?set=a.10151908376636729.1073741825.20531316728&type=3theater}},
+	Date-Modified = {2017-11-08 00:04:01 +0000},
+	Howpublished = {\\ \url{https://www.facebook.com/media/set/?set=a.10151908376636729.1073741825.20531316728&type=3theater} [online]},
 	Title = {{Facebook's Growth In The Past Year}},
 	Year = {2013}}
 
